# arcadedb-llama-index

./: .gitignore  CHANGELOG.md  README.md  conftest.py  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements.txt  start-arcadedb.bat  start-arcadedb.sh
examples/: advanced_usage.py  basic_usage.py  embedded_server.py
graph_stores/llama-index-graph-stores-arcadedb/: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
graph_stores/llama-index-graph-stores-arcadedb/llama_index/: __init__.py
graph_stores/llama-index-graph-stores-arcadedb/llama_index/graph_stores/: __init__.py
graph_stores/llama-index-graph-stores-arcadedb/llama_index/graph_stores/arcadedb/: __init__.py  _db_adapter.py  arcadedb_property_graph.py  arcadedb_property_graph_clean.py  base.py
graph_stores/llama-index-graph-stores-arcadedb/tests/: test_graph_stores_arcadedb.py  test_pg_stores_arcadedb.py
tests/: setup_logging.py  test_arcadedb_embedded_integration.py  test_arcadedb_integration.py  test_auth.py  test_correct_auth.py  test_current_features.py  test_embedded_inheritance_indexes.py  test_enhanced_features.py  test_final_integration.py  test_final_integration_embedded.py  test_graph_stores_arcadedb_embedded.py  test_pg_stores_arcadedb_embedded.py  test_remote_inheritance_indexes.py
