[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython==8.10.0",
    "jupyter>=1.0.0,<2",
    "mypy>=1.0.0",
    "pre-commit==3.2.0",
    "pylint==2.15.10",
    "pytest==7.2.1",
    "pytest-mock==3.11.1",
    "ruff==0.11.11",
    "types-Deprecated>=0.1.0",
    "types-PyYAML>=6.0.12.12,<7",
    "types-protobuf>=4.24.0.4,<5",
    "types-redis==4.5.5.0",
    "types-requests==2.28.11.8",
    "types-setuptools==67.1.0.0",
    "black[jupyter]<=23.9.1,>=23.7.0",
    "codespell[toml]>=v2.2.6",
    "diff-cover>=9.2.0",
    "pytest-cov>=6.1.1",
]

[project]
name = "llama-index-graph-stores-arcadedb"
version = "0.3.0"
description = "LlamaIndex Graph Stores integration for ArcadeDB - Multi-Model Database with Graph, Document, Key-Value, Vector, and Time-Series support"
authors = [
    {name = "Adams Rosales"},
    {name = "ExtReMLapin"},
    {name = "Steve Reiner"},
]
maintainers = [
    {name = "Steve Reiner"},
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "llama-index",
    "arcadedb",
    "graph-store",
    "property-graph",
    "vector-search",
    "graphrag",
    "knowledge-graph",
    "multi-model",
    "database",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "llama-index-core>=0.13.0,<0.15",
    "arcadedb-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "docker>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/stevereiner/arcadedb-llama-index"
Documentation = "https://docs.llamaindex.ai/en/stable/module_guides/storing/graph_stores/"
Repository = "https://github.com/stevereiner/arcadedb-llama-index"
"Bug Tracker" = "https://github.com/stevereiner/arcadedb-llama-index/issues"
"ArcadeDB Documentation" = "https://docs.arcadedb.com/"
"ArcadeDB Homepage" = "https://arcadedb.com/"

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]
exclude = ["**/BUILD"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.graph_stores.arcadedb"

[tool.llamahub.class_authors]
ArcadeDBGraphStore = "arcadedb"
ArcadeDBPropertyGraphStore = "arcadedb"

[tool.mypy]
disallow_untyped_defs = true
exclude = ["_static", "build", "examples", "notebooks", "venv"]
ignore_missing_imports = true
python_version = "3.10"
